--- a/webroot/css/stylesForm.css
+++ b/webroot/css/stylesForm.css
@@ -1,3 +1,13 @@
+:root {
+    --tamañoLetraError: .75em;
+    --marginBottomInput: calc(var(--tamañoLetraError) / 1.5);
+    --backgroundBody: #f5f5f5;
+    --backgroundElementos: #fff;
+    --backgroundInput: #ccc;
+    --buttonColor: #4e9645;
+    --buttonColorHover: color-mix(in srgb, var(--buttonColor) 100%, #000 25%);
+    --buttonColorActive: color-mix(in srgb, var(--buttonColor) 50%, #000 10%);
+}
 body {
     font-family: Arial, sans-serif;
     background: #f5f5f5;
@@ -17,26 +27,34 @@ form {
 #campos div {
     display: flex;
     flex-direction: column;
+    position: relative;
+    margin-bottom: var(--marginBottomInput);
+    z-index: 1;
+    background: var(--backgroundElementos);
 }
 input {
     padding: 8px;
     border-radius: 6px;
-    border: 1px solid #ccc;
-    /* width: min-content; */
+    border: 1px solid var(--backgroundInput);
 }
 input[type="submit"] {
     margin-top: 15px;
-    padding: 10px;
+    padding: 10px 15px;
     border: none;
     background: #4e9645;
     color: #fff;
     font-size: 16px;
     border-radius: 6px;
     cursor: pointer;
-    transition: .2s;
+    transition: .15s;
 }
 input[type="submit"]:hover {
-    background: #4e9645;
+    background: var(--buttonColorHover);
+    scale: 1.04;
+}
+input[type="submit"]:active {
+    background: var(--buttonColorActive);
+    scale: 0.99;
 }
 input[obligatorio]{
     background-color: #fbff0042;
@@ -44,8 +62,15 @@ input[obligatorio]{
 input[disabled]{
     background-color: #46464641;
 }
+[class^="error"] {color: red;}
 .errorCampo {
-    font-size: 13px;
+    z-index: 0;
+    position: absolute;
+    bottom: calc(-3px - var(--tamañoLetraError));
+    height: var(--tamañoLetraError);
+    max-height: var(--tamañoLetraError);
+    line-height: var(--tamañoLetraError);
+    font-size: var(--tamañoLetraError);
     margin-top: 3px;
 }
 .resultado {
